Sniffer code merge and data sender preparation

--- a/src/WiFiDeviceLocator/platformio.ini
+++ b/src/WiFiDeviceLocator/platformio.ini
@@ -13,3 +13,6 @@ platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
 monitor_speed = 115200
+lib_deps = 
+	plapointe6/EspMQTTClient@^1.13.3
+	bblanchon/ArduinoJson@^6.21.2
